<?xml version="1.0" encoding="utf-8"?>
<!-- Static launcher shortcuts. Each opens MainActivity with the OPEN action and a target the nav host reads. -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="due"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_due"
        android:shortcutShortLabel="@string/shortcut_due"
        android:shortcutLongLabel="@string/shortcut_due_long">
        <intent
            android:action="dev.logb.android.action.OPEN"
            android:targetPackage="dev.logb.android"
            android:targetClass="dev.logb.android.MainActivity">
            <extra android:name="target" android:value="Due" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="dev.logb.android.action.OPEN"
            android:targetPackage="dev.logb.android"
            android:targetClass="dev.logb.android.MainActivity">
            <extra android:name="target" android:value="Search" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="new_object"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add"
        android:shortcutShortLabel="@string/shortcut_new"
        android:shortcutLongLabel="@string/shortcut_new_long">
        <intent
            android:action="dev.logb.android.action.OPEN"
            android:targetPackage="dev.logb.android"
            android:targetClass="dev.logb.android.MainActivity">
            <extra android:name="target" android:value="NewObject" />
        </intent>
    </shortcut>
</shortcuts>
